# claude-old

./: .gitignore  MANIFEST.in  README.md  claude.yaml  notes.txt  package.json  pyproject.toml  run-dev-server  setup.py  tsconfig.json  webpack.config.js
claude/: api.py  app.py  chromecast_proxy_service.py  config.py  config_sync_service.py  controller_base.py  controller_cache.py  db.py  javascript_libraries.py  memcache.py  models.py  tools.py  transmission.py  websocket_listener.py
claude/alembic/: env.py
claude/components/: keys.py
claude/sync_service/: listener.py  runner.py  server.py
claude/templates/: index.html
tasks/: __init__.py  assets.py  start.py  top.py  typescript.py
ts/: ConfigSyncService.ts  actions.ts  api.ts  client.ts  index.tsx  locales.ts  reducers.ts  store.ts  themes.ts  tools.ts  types.ts  widgetRegistry.ts
ts/components/: AddWidgetMenu.tsx  App.tsx  CalendarWidget.tsx  ChromecastWidget.tsx  ClockWidget.tsx  ControlBar.tsx  Dashboard.tsx  DashboardConfigDialog.tsx  DashboardSelector.tsx  DashboardSettingsDialog.tsx  FlagIcon.tsx  IdokepCurrent.tsx  IdokepDays.tsx  IdokepHours.tsx  InfluxTable.tsx  ServerStatusWidget.tsx  StorageStatusWidget.tsx  TransmissionWidget.tsx  WidgetBoilerplate.tsx  WidgetFrame.tsx  WidgetList.tsx  WidgetMenu.tsx  WidgetRemoveButton.tsx  WidgetSettingsDialog.tsx  tools.tsx
ts/containers/: AddWidgetMenu.tsx  App.ts  App.tsx  ControlBar.ts  ControlBar.tsx  DashboardSelector.ts  DashboardSelector.tsx  DashboardSettingsButton.tsx  LocaleSelector.tsx  WidgetFrame.ts  WidgetList.ts  WidgetRemoveButton.ts
(+1 files in other folders)
